--- a/BelleVie-master/Homepage.html
+++ b/BelleVie-master/Homepage.html
@@ -31,7 +31,7 @@
         <tr>
             <td id="about" class="animated slideInLeft" style="animation-delay:2s;">
                 <h1>We care about your hair and your well being</h1>
-                <button class="btn_one">Book us</button><br>
+                <button class="btn_one"><a href="book.html">Book us</a></button><br>
 
             </td>
             <td id="rightImage" width="900" height="700" class="animated jackInTheBox" style="animation-delay:2.2s;"></td>
