--- a/BelleVie-master/book.html
+++ b/BelleVie-master/book.html
@@ -5,34 +5,50 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Booking</title>
+  <title>booking</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
-  <link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" rel="stylesheet" type="text/css" />
-
+  <link rel="stylesheet" href="book_index.css">
   <link rel="stylesheet" href="book.css">
-
-  <style>
-
-  </style>
   <script>
     function onSubmit() {
-
       alert("Reservation finished!");
       window.location.replace("index.html");
       return false;
+    }
+
+    function goHome(section) {
+      window.location.replace("index.html#" + section);
     }
   </script>
 </head>
 
 <body>
+  <div id="loading">
+    <div id="spinner"></div>
+  </div>
+  <header id="header" class="animated slideInDown" style="animation-delay:2.0s;">
+    <table>
+      <tr>
+        <td id="logo">Hair We Are.</td>
+        <td id="navigation">
+    
+          <!-- <a href="./index.html">portfolio</a>
+          <a href="./index.html">about</a>
+          <a href="./index.html">contact</a> -->
+
+          <a href="./index.html#portfolio" onclick="goHome('portfolio')">portfolio</a>
+          <a href="./index.html#bio" onclick="goHome('bio')">about</a>
+          <a href="./index.html#contact" onclick="goHome('contact')">contact</a>
+          <a href="./index.html#homepage" onclick="goHome('homepage')">homepage</a>
+        </td>
+      </tr>
+    </table>
+  </header>
+
   <div class="wrapper">
     <div class="container">
       <h1>Make a reservation</h1>
@@ -68,10 +84,12 @@
     </ul>
   </div>
 
+
+  <div id="footer">
+    made by group 3 with love <br> <a href="https://www.silhcdn.com/3/i/shapes/lg/0/1/d207710.jpg">thanks</a>
+  </div>
+  <script src="index.js" type="text/javascript"></script>
+  <script src="book.js" type="text/javascript"></script>
 </body>
 
-<script>
-  $('#datepicker').datepicker({
-    uiLibrary: 'bootstrap4'
-  });
-</script>
+</html>
